# hse-multithreading-examples

./: README.md
tasks/futex/: CMakeLists.txt  futex_mutex.h  test.cpp
tasks/future/: CMakeLists.txt  process_pool.h  process_pool_demo.cpp
tasks/ipc/: CMakeLists.txt  consumer_main.cpp  ipc_mpsc_queue.h  producer_main.cpp
tasks/processes_and_threads/: apply_function.h  benchmark.cpp  test.cpp
tasks/synchronization_primitives/buffered_channel/: buffered_channel.h
